--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ section::before {
 .home h3 {
     font-size: 48px;
 }
+
+.home img{
+    width: 100%;
+}
+
 .home .arrow img {
     width: 60px;
 }
@@ -136,6 +141,17 @@ section::before {
 
 .form-label {
     font-weight: 700;
+}
+
+@media only screen and (max-width: 768px){
+    .home img{
+        width: 50%
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    section::before
+    font-size: 64px;
 }
 
 @keyframes upDown{
