fix css problem

--- a/style.css
+++ b/style.css
@@ -150,8 +150,10 @@ section::before {
 }
 
 @media only screen and (max-width: 576px) {
-    section::before
-    font-size: 64px;
+    section::before {
+        left: -10px;
+        font-size: 64px;
+    }
 }
 
 @keyframes upDown{
